@@ -1,3 +1,8 @@
+1998-06-03  Martin Baulig <martin@home-of-linux.org>
+
+	* gnome-guile-checks.m4 (GNOME_CHECK_GUILE): Looks also in $GNOME_LIBDIR;
+	added failflag: GNOME_CHECK_GUILE(fail) will abort if guile cannot be found.
+
 1998-05-23  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-libgtop-sysdeps.m4 (GNOME_LIBGTOP_HOOK):
